Fixed table overwidth on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -161,6 +161,11 @@ tr.disabled {
 	font-style: italic;
 }
 
+.table-container {
+	width: 100%;
+	overflow-x: scroll;
+}
+
 @media (min-width: 1400px) {
 	.container-xxl, .container-xl, .container-lg, .container-md, .container-sm, .container {
 		max-width: 1140px;
